@@ -1,5 +1,5 @@
 \chapter{Installation\label{installation}}
-
+\indexii{installation}{UNIX}
 \indexii{mod_python}{mailing list}
 NOTE: By far the best place to get help with installation and other
 issues is the mod_python mailing list. Please take a moment to join
